tests/ui/iterators/iter-macro-not-async-closure-simplified.narrow.stderr
error[E0277]: the trait bound `{gen closure@$DIR/iter-macro-not-async-closure-simplified.rs:21:21: 21:28}: AsyncFnOnce()` is not satisfied
  --> $DIR/iter-macro-not-async-closure-simplified.rs:27:21
   |
LL |     call_async_once(f);
   |     --------------- ^ unsatisfied trait bound
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `AsyncFnOnce()` is not implemented for `{gen closure@$DIR/iter-macro-not-async-closure-simplified.rs:21:21: 21:28}`
note: required by a bound in `call_async_once`
  --> $DIR/iter-macro-not-async-closure-simplified.rs:18:28
   |
LL | ...pl AsyncFnOnce()) {}
   |       ^^^^^^^^^^^^^ required by this bound in `call_async_once`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
